Added publisher login validation. Working on add game validation

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8",
     "@adonisjs/validator": "^5.0.6",
+    "adonis-4-cloudinary": "^1.0.2",
     "adonis-validation-provider": "^3.0.5",
     "mysql": "^2.18.1"
   },
